# async-payment-processing-service

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0c593dae5530_add_webhook_sent_to_payments.py  afadbaab9e61_initial_migration.py
app/: config.py  consumer_main.py  main.py
app/api/: deps.py
app/api/v1/: payments.py  schemas.py
app/broker/: consumer.py  topology.py
app/db/: session.py
app/models/: outbox.py  payment.py
app/services/: outbox_publisher.py  payment_service.py
tests/: test_auth.py  test_consumer.py  test_db.py  test_health.py  test_models.py  test_outbox_publisher.py  test_payment_api.py  test_schemas.py
